--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "dev": "npm run serve"
+    "dev": "npm run serve",
+    "prod": "npm run build && serve -s dist"
   },
   "dependencies": {
     "register-service-worker": "^1.5.2",
