--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "serve": "^10.1.2",
     "vue-template-compiler": "^2.5.21"
   }
 }
