--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -14,5 +14,7 @@
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone"
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#ffffff"
 }
