--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Daily Global Meditation",
-  "short_name": "DaGlMe",
+  "short_name": "Daily Global Meditation",
   "icons": [
     {
       "src": "./img/icons/android-icon-144x144.png",
