--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Daily Global Meditation",
-  "short_name": "Daily Global Meditation",
+  "short_name": "Day-Glob-Med",
   "icons": [
     {
       "src": "./img/icons/android-icon-144x144.png",
@@ -10,6 +10,11 @@
     {
       "src": "./img/icons/android-icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icons/android-icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
