--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8928",
-    "build": "vue-cli-service build",
+    "serve:dev": "vue-cli-service serve --port 8928",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "dev": "npm run serve",
-    "prod": "npm run build && serve -s dist"
+    "dev": "npm run serve:dev",
+    "build": "vue-cli-service build",
+    "serve:prod": "serve -s dist",
+    "copy:dist": "cp -r dist/. dist-archive/",
+    "prod": "npm run copy:dist && npm run build && npm run serve:prod"
   },
   "dependencies": {
     "register-service-worker": "^1.5.2",
