Add build timestamp

--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
     "build": "vue-cli-service build",
     "serve:prod": "serve -s dist",
     "backup:dist": "cp -r dist/. dist-backup/",
+    "echo:time": "echo %time%",
     "archive:dist": "cp -r dist-backup/. dist-archive-`date +%Y%m%d-%H%M`/",
-    "prod": "npm run build && npm run serve:prod",
+    "prod": "npm run build && npm run echo:time && npm run serve:prod",
     "prod:backup": "npm run backup:dist && npm run prod"
   },
   "dependencies": {
